RESOLVED FIXED174624
Web Automation: error details not passed to DidEvaluateJavaScriptFunction message when callback was not called before page unload
https://bugs.webkit.org/show_bug.cgi?id=174624
Summary Web Automation: error details not passed to DidEvaluateJavaScriptFunction mes...
Carlos Garcia Campos
Reported 2017-07-18 05:28:12 PDT
There's a variable errorMessage, but it's unused.
Attachments
Patch (2.07 KB, patch)
2017-07-18 05:29 PDT, Carlos Garcia Campos
bburg: review+
Carlos Garcia Campos
Comment 1 2017-07-18 05:29:51 PDT
Blaze Burg
Comment 2 2017-07-18 15:09:31 PDT
Comment on attachment 315791 [details] Patch r=me
Carlos Garcia Campos
Comment 3 2017-07-18 23:10:22 PDT
Note You need to log in before you can comment on or make changes to this bug.