Web Automation: error details not passed to DidEvaluateJavaScriptFunction message when callback was not called before page unload https://bugs.webkit.org/show_bug.cgi?id=174624

Reviewed by Brian Burg.

There's a variable errorMessage, but it's unused.

* WebProcess/Automation/WebAutomationSessionProxy.cpp:
(WebKit::WebAutomationSessionProxy::didClearWindowObjectForFrame): Pass errorMessage instead of String() to DidEvaluateJavaScriptFunction.

Canonical link: https://commits.webkit.org/191462@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219651 268f45cc-cd09-0410-ab3c-d52691b4dbfc